Add mousemove event using Observable

--- a/index.html
+++ b/index.html
@@ -4,10 +4,19 @@
 <head>
     <meta charset="UTF-8">
     <title>RxJS</title>
+    <style>
+        #mouseCircle {
+            height: 10px;
+            width: 10px;
+            border-radius: 50%;
+            background-color: red;
+            position: absolute;
+        }
+    </style>
 </head>
 
 <body>
-    <div>Drinker</div>
+    <div id="mouseCircle"></div>
     <script src="app.js"></script>
 </body>
 
